@@ -1,5 +1,5 @@
 <?php
-// $Id: views-view-rss.tpl.php,v 1.2 2008-07-21 20:56:49 merlinofchaos Exp $
+// $Id: views-view-rss.tpl.php,v 1.3 2008-12-02 00:02:06 merlinofchaos Exp $
 /**
  * @file views-view-rss.tpl.php
  * Default template for feed displays that use the RSS style.
@@ -9,5 +9,12 @@
 ?>
 <?php print "<?xml"; ?> version="1.0" encoding="utf-8" <?php print "?>"; ?>
 <rss version="2.0" xml:base="<?php print $link; ?>"<?php print $namespaces; ?>>
-  <?php print $channel; ?>
+  <channel>
+    <title><?php print $title; ?></title>
+    <link><?php print $link; ?></link>
+    <description><?php print $description; ?></description>
+    <language><?php print $langcode; ?></language>
+    <?php print $channel_elements; ?>
+    <?php print $items; ?>
+  </channel>
 </rss>
